@@ -1,3 +1,14 @@
+Mon Nov 17 11:07:50 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (command_new_function): Initialise discard_err.
+	  (pipeline_start): Zero-initialise pids and statuses arrays on
+	  allocation, and don't unblock SIGCHLD until after doing so.
+	* src/manconv.c (manconv): Don't free elements of from here, as when
+	  called from manconv_stdin they will be freed by
+	  free_manconv_codes.
+	* src/manconv_main.c (main): Free elements of from_code here
+	  instead.
+
 Mon Nov 17 10:45:55 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* libdb/db_storage.h (infoalloc): Implement as a macro rather than
